--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'commons-io:commons-io:2.4'
+    compile 'com.github.satyan:sugar:1.4'
+
+
 }
+
+
+
